# surefire

./: .gitignore  .gitmodules  CMakeLists.txt  HalcyonStateMachine.hpp  HalcyonStateMachine.ss  HalcyonStateMachine.txt  HalcyonStateVector.hpp  HalcyonStateVector.txt  README.md  codecov.yml  derp.txt  makefile  nilrt.cmake  rocket.sm  rocket.ss  rocket.sv  sbrio9637.cmake  test.sm  test.ss  test.sv
.github/: codecov.yml
.github/workflows/: build.yml  c-cpp.yml
docs/: basic-application-bringup.md  design-one-pager.md  index.md
examples/: CMakeLists.txt
examples/arduino/: CMakeLists.txt  README.md  main.cpp  select_board.py
pal/: Clock.hpp  Console.hpp  Platform.hpp  Socket.hpp  Spinlock.hpp  Thread.hpp
pal/utest/: UTestClock.cpp  UTestConsole.cpp  UTestSocketSelect.cpp  UTestSpinlock.cpp  UTestThread.cpp  UTestThreadCommon.cpp  UTestThreadCommon.hpp  UTestThreadFair.cpp  UTestThreadRealTime.cpp  UTestUdpSocket.cpp
psl/linux/: Clock.cpp  Console.cpp  Socket.cpp  Spinlock.cpp  Thread.cpp  ThreadPriorityRanges.cpp  ThreadPrivate.hpp
psl/sbrio9637/: ThreadPriorityRanges.cpp
sfa/: BasicTypes.hpp  ConfigErrorInfo.cpp  ConfigInfo.cpp  ConfigInfo.hpp  ConfigTokenizer.cpp  ConfigTokenizer.hpp  EnumHash.hpp  Result.hpp  UTest.hpp
sfa/cli/: CliMain.cpp  CliSv.cpp  CliSv.hpp
sfa/config/: ConfigErrorInfo.cpp  ConfigErrorInfo.hpp  ConfigTokenizer.cpp  ConfigTokenizer.hpp
sfa/config/utest/: UTestConfigTokenizer.cpp
sfa/sm/: AssignmentAction.hpp  ExpressionNode.hpp  ExpressionTree.hpp  IAction.cpp  IAction.hpp  StateMachine.cpp  StateMachine.hpp  TransitionAction.cpp  TransitionAction.hpp
sfa/sm/utest/: UTestAssignmentAction.cpp  UTestExpressionNode.cpp  UTestExpressionTree.cpp  UTestStateMachineBasic.cpp  UTestStateMachineConfigErrors.cpp  UTestStateMachineCreate.cpp  UTestStateMachineStep.cpp  UTestTransitionAction.cpp
sfa/statevec/: Element.cpp  Element.hpp  Region.cpp  Region.hpp  StateVector.cpp  StateVector.hpp  StateVectorParser.cpp  StateVectorParser.hpp
sfa/statevec/utest/: UTestConfigTokenizer.cpp  UTestElement.cpp  UTestRegion.cpp  UTestStateVector.cpp  UTestStateVectorParser.cpp
sfa/sv/: Element.cpp  Element.hpp  Region.cpp  Region.hpp  StateVector.cpp  StateVector.hpp  StateVectorParser.cpp  StateVectorParser.hpp
sfa/sv/utest/: UTestElement.cpp  UTestRegion.cpp  UTestStateVector.cpp  UTestStateVectorAccess.cpp  UTestStateVectorConfigErrors.cpp  UTestStateVectorCreate.cpp  UTestStateVectorParser.cpp  UTestStateVectorParserError.cpp  UTestStateVectorParserErrors.cpp  UTestStateVectorParserParse.cpp
sfa/task/: ITask.cpp  ITask.hpp
sfa/task/utest/: UTestITask.cpp
sfa/utest/: UTestConfigTokenizer.cpp
sfa/util/: EnumHash.hpp  MemOps.cpp  MemOps.hpp  MemoryOps.cpp  MemoryOps.hpp
sfa/util/utest/: UTestMemOps.cpp
src/sf/: README.md
src/sf/cli/: CliMain.cpp  CliUtil.cpp  CliUtil.hpp  SmCmd.cpp  SmCmd.hpp  StateMachineCommand.cpp  StateMachineCommand.hpp  StateVectorCommand.cpp  StateVectorCommand.hpp  SvCmd.cpp  SvCmd.hpp
src/sf/config/: Autocode.cpp  Autocode.hpp  ConfigUtil.cpp  ConfigUtil.hpp  EnumHash.hpp  ErrorInfo.cpp  ErrorInfo.hpp  ExpressionAssembly.cpp  ExpressionAssembly.hpp  ExpressionCompiler.cpp  ExpressionCompiler.hpp  ExpressionParse.cpp  ExpressionParse.hpp  ExpressionParser.cpp  ExpressionParser.hpp  LanguageConstants.cpp  LanguageConstants.hpp  StateMachineAssembly.cpp  StateMachineAssembly.hpp  StateMachineAutocoder.cpp  StateMachineAutocoder.hpp  StateMachineCompiler.cpp  StateMachineCompiler.hpp  StateMachineParse.cpp  StateMachineParse.hpp  StateMachineParser.cpp  StateMachineParser.hpp  StateScriptAssembly.cpp  StateScriptAssembly.hpp  StateScriptCompiler.cpp  StateScriptCompiler.hpp  StateScriptParse.cpp  StateScriptParse.hpp  StateScriptParser.cpp  StateScriptParser.hpp  StateVectorAssembly.cpp  StateVectorAssembly.hpp  StateVectorAutocoder.cpp  StateVectorAutocoder.hpp  StateVectorCompiler.cpp  (+12 more)
src/sf/config/utest/: UTestExpressionAssembly.cpp  UTestExpressionCompiler.cpp  UTestExpressionParse.cpp  UTestExpressionParser.cpp  UTestTokenIterator.cpp  (+21 more)
src/sf/core/: Action.cpp  Action.hpp  AnalogIOTask.cpp  AnalogIOTask.hpp  Assert.cpp  Assert.hpp  BasicTypes.hpp  Diag.cpp  Diag.hpp  Diagnostic.cpp  Diagnostic.hpp  DigitalIOTask.cpp  DigitalIOTask.hpp  Element.cpp  Element.hpp  Executor.hpp  Expression.cpp  Expression.hpp  ExpressionStats.cpp  ExpressionStats.hpp  MemOps.cpp  MemOps.hpp  RealTimeExecutor.hpp  Region.cpp  Region.hpp  RegionRxTask.hpp  RegionTxTask.cpp  RegionTxTask.hpp  Result.hpp  SpinExecutor.cpp  SpinExecutor.hpp  StateMachine.cpp  StateMachine.hpp  StateVector.cpp  StateVector.hpp  Task.cpp  Task.hpp
src/sf/pal/: AnalogIO.hpp  AnalogIo.hpp  Clock.hpp  Console.hpp  DigitalIO.hpp  DigitalIo.hpp  Lock.hpp  Socket.hpp  Spinlock.hpp  System.hpp  Thread.hpp
src/sf/utest/: UTest.cpp  UTest.hpp  UTestMain.cpp
src/sfa/: Result.hpp
src/sfa/cli/: CliMain.cpp  CliSv.cpp  CliSv.hpp  SmCmd.cpp  SmCmd.hpp  SvCmd.cpp  SvCmd.hpp
src/sfa/core/: Action.cpp  Action.hpp  Assert.hpp  AssignmentAction.hpp  BasicTypes.hpp  Diag.cpp  Diag.hpp  Element.cpp  Element.hpp  Expression.cpp  Expression.hpp  ExpressionNode.hpp  IAction.cpp  IAction.hpp  ITask.cpp  ITask.hpp  MemOps.cpp  MemOps.hpp  Region.cpp  Region.hpp  Result.hpp  StateMachine.cpp  StateMachine.hpp  StateVector.cpp  StateVector.hpp  Task.cpp  Task.hpp  TransitionAction.cpp  TransitionAction.hpp
src/sfa/pal/: AnalogIo.hpp  Clock.hpp  Console.hpp  DigitalIo.hpp  Dio.hpp  Platform.hpp  Socket.hpp  Spinlock.hpp  System.hpp  Thread.hpp
src/sfa/sup/: ConfigErrorInfo.cpp  ConfigErrorInfo.hpp  ConfigTokenizer.cpp  ConfigTokenizer.hpp  ConfigUtil.cpp  ConfigUtil.hpp  ExpressionCompiler.cpp  ExpressionCompiler.hpp  ExpressionParser.cpp  ExpressionParser.hpp  StateMachineCompiler.cpp  StateMachineCompiler.hpp  StateMachineParser.cpp  StateMachineParser.hpp  StateVectorCompiler.cpp  StateVectorCompiler.hpp  StateVectorParser.cpp  StateVectorParser.hpp  TokenIterator.cpp  TokenIterator.hpp
src/sfa/utest/: UTest.cpp  UTest.hpp
utest/: UTest.hpp  UTestMain.cpp
(+137 files in other folders)
